# NordVPN-switcher

./: .gitignore  MANIFEST.in  nordvpn_switch.py  setup.cfg  setup.py
scripts/: build-and-deploy.sh  build_and_deploy.sh  distify.sh  upload.sh
src/: __init__.py  nordvpn_switch.py
