[metadata]
name = datary_nordvpn_switcher
version = 0.0.1
description = Automatic endpoint switcher for NordVPN
long_description = file: README.md
long_description_content_type = text/markdown
author = Datary
author_email = engineering@datary.io
license = Apache License 2.0
url = https://github.com/datary/nordvpn_switcher

[options]
package_dir =
    datary_nordvpn_switcher=src
packages =
    datary_nordvpn_switcher
    datary_nordvpn_switcher.NordVPN_options
include_package_data = True
install_requires =
    psutil
    bs4
    requests
    lxml
    pathlib
    random_user_agent
